# SecureAgents

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Enhanced_Adaptive_Security_Student_Guide.docx  Enhanced_Adaptive_Security_Student_Guide.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  create_word_doc.py  pyproject.toml  setup.py  test_all_user_examples.py  test_complete_integration.py  test_enhanced_adaptive.py  test_framework_integration.py  test_novel_pattern_creation.py  test_novel_threats.py  test_security_enhancements.py  test_security_messages.py  test_simple_user_example.py  test_truly_novel_threats.py  test_user_example_with_security.py
.github/: CODEOWNERS
Palo_Alto_Security_Validation/: README.md  generate_stakeholder_report.py  stakeholder_security_test.py
V0.4_Tests/: comprehensive_all_formats_test.py  comprehensive_guardrails_test.py  comprehensive_production_security_test.py  comprehensive_result_destination_test.py  comprehensive_security_profiles_test.py  debug_10000_limit.py  debug_safe_research.py  final_production_validation_test.py  fix_10000_limit.py  simple_production_validation_test.py  test_squad_short_prompt.py
clean_test_env/: pyvenv.cfg
docs/: adaptive_security_mechanism.md  attack_prevention.md  best_practices.md  error_messages_guide.md  faq.md  guardrails_comprehensive.md  hybrid_security_validation.md  index.md  installation.md  memory_reference.md  memory_usage.md  performance_optimization.md  quick_start.md  recommendation_system.md  result_destination.md  security_checkpoints.md  security_enhancements.md  security_features_comprehensive.md  security_focus.md  security_guide.md  security_profiles.md  security_profiles_guide.md  usage_guide.md  version_changes.md
enhanced_visualizations/: validation_report_high_regex_insecure_20250521_110335.html  validation_report_maximum_ml_pipeline_insecure_20250521_110338.html  validation_report_minimal_regex_secure_20250521_110338.html  validation_report_standard_ml_pipeline_insecure_20250521_110338.html  validation_result_high_regex_insecure_20250521_110335.json  validation_result_maximum_ml_pipeline_insecure_20250521_110338.json  validation_result_minimal_regex_secure_20250521_110338.json  (+1 more)
examples/: README.md  ai_research_team.py  simple_ai_writer.py  (+15 more)
(+259 files in other folders)
