[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbh-secure-agents"
version = "0.5.4"
description = "Enterprise-grade secure multi-agent framework with ML-powered security validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "TBH AI Team", email = "info@tbh.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "google-generativeai>=0.3.0",
    "filelock>=3.0.0",
    "nltk>=3.8.0",
    "reportlab>=4.0.0",
    "joblib>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tbh-ai/SecureAgents"
Documentation = "https://github.com/tbh-ai/SecureAgents#readme"
Repository = "https://github.com/tbh-ai/SecureAgents.git"
Issues = "https://github.com/tbh-ai/SecureAgents/issues"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "." }
packages = find:

[tool.setuptools.packages.find]
where = ["."]
include = ["tbh_secure_agents*"]
exclude = ["tests", "tests.*", "examples", "examples.*", "docs", "docs.*"]

[tool.setuptools.package-data]
"tbh_secure_agents.security_validation.models.data" = ["*.pkl"]
"tbh_secure_agents.security_validation.models.data.enhanced" = ["*.pkl"]
"tbh_secure_agents.security_validation.models" = ["*.json"]
